# thor-mlops

./: .gitignore  pyproject.toml  schema.json  starschema.json  test_json.py  test_ml.py  test_sku.py
src/thor_mlops/: starschema.py
thor_mlops/: clean.py  ops.py  starschema.py
